# FLINNG

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Flinng.h  LshFunctions.h  io.h  lib_flinng.h
pybind/: pybind.cpp
src/: Flinng.cpp  LshFunctions.cpp  LshFunctions.h  io.cpp  lib_flinng.cpp
test/: test-l2-dense.py  test_dense.cpp
